Perubahan API versi 1

--- a/App.ipynb
+++ b/App.ipynb
@@ -20,7 +20,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 5,
       "id": "d43abc49",
       "metadata": {
         "id": "d43abc49",
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -91,6 +91,7 @@
         "                'message': 'Success Predicting',\n",
         "                'Persentase Akurasi': max_value,\n",
         "                'Tag Beasiswa': cluster,\n",
+        "                'output' : output\n",
         "            }), 200\n",
         "        else:\n",
         "            return jsonify({\n",
@@ -107,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -131,28 +132,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "1/1 [==============================] - 0s 103ms/step\n"
+            "1/1 [==============================] - 0s 90ms/step\n"
           ]
         },
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "127.0.0.1 - - [05/Dec/2023 18:42:33] \"POST /predict HTTP/1.1\" 200 -\n"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "1/1 [==============================] - 0s 47ms/step\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "127.0.0.1 - - [05/Dec/2023 18:46:42] \"POST /predict HTTP/1.1\" 200 -\n"
+            "127.0.0.1 - - [06/Dec/2023 22:45:51] \"POST /predict HTTP/1.1\" 200 -\n"
           ]
         }
       ],
